try to fix content jump  on scroll

--- a/src/assets/style/global.css
+++ b/src/assets/style/global.css
@@ -43,7 +43,10 @@
 }
 
 body {
-  margin: 0 0 calc(var(--navigation-height) + 22.5px) 0;
+  margin: 0;
+  padding-bottom: calc(
+    var(--navigation-height) + 22.5px
+  ); /* height of nav-bar plus some space */
   overflow-y: scroll; /* avoid content jump */
 }
 /* Resets */
